Changes to kick-off work

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <body>
 
   <div class="container">
-  <h1>Hello World</h1>
-  <a href="" class="btn btn-primary">Click Me</a>
+  <h1>Weather App v.2</h1>
+ 
   </div>
-  
 
   <script src="src/app.js"></script>
 </body>
