--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
   <div class="container">
 
+  <div class="weather-app-wrapper">
     <div class="weather-app">
+      <div class="overview">
+
   <h1>Warsaw</h1>
   <ul>
     <li>
@@ -24,10 +27,15 @@
       Partly Cloudy
     </li>
   </ul>
+</div>
  <div class="row">
    <div class="col-6">
-     <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Partly Cloudy" />
-     12 °C | °F 
+     <div class="clearfix weather-temperature">
+     <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Partly Cloudy" class="float-left" />
+     <div class="float-left">
+     <strong>12</strong><span class="units">°C | <a href="#">°F</a> </span>
+    </div>
+    </div>
    </div>
    <div class="col-6">
      <ul>
@@ -43,9 +51,10 @@
      </ul>
    </div>
  </div>
- 
- <small><a href="https://github.com/17thaugust/weather-app-v2" target="_blank">Coded</a> by Karolina</small>
 
+</div>
+
+<small><a href="https://github.com/17thaugust/weather-app-v2" target="_blank">Coded</a> by Karolina</small>
 
 </div>
 </div>
