--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css">
     <title>Weather App v.2</title>
 </head>
@@ -18,13 +19,12 @@
     <div class="weather-app">
       <div class="overview">
 
-  <h1>Warsaw</h1>
+  <h1 id="city"></h1>
   <ul>
     <li>
       Sunday 20:00
     </li>
-    <li>
-      Partly Cloudy
+    <li id="description">
     </li>
   </ul>
 </div>
@@ -33,20 +33,17 @@
      <div class="clearfix weather-temperature">
      <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Partly Cloudy" class="float-left" />
      <div class="float-left">
-     <strong>12</strong><span class="units">°C | <a href="#">°F</a> </span>
+     <strong id="temperature"></strong><span class="units">°C | <a href="#">°F</a> </span>
     </div>
     </div>
    </div>
    <div class="col-6">
      <ul>
-       <li>
-         Precipitation: 0%
-       </li>
       <li>
-         Humidity: 73%
+         Humidity: <span id="humidity"></span>%
       </li>
       <li>
-        Wind: 2 km/h
+        Wind: <span id="wind"></span> km/h
       </li>
      </ul>
    </div>
