--- a/index.html
+++ b/index.html
@@ -59,6 +59,60 @@
    </div>
  </div>
 
+<br />
+
+<div class="row weather-forecast">
+
+  <div class="col-2">
+    <h3>Sun</h3>
+    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+    <div class="weather-forecast-temperature">
+      <strong>12°</strong> 9°
+    </div>
+  </div>
+
+  <div class="col-2">
+    <h3>Mon</h3>
+    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+    <div class="weather-forecast-temperature">
+      <strong>12°</strong> 9°
+    </div>
+  </div>
+
+  <div class="col-2">
+    <h3>Tue</h3>
+    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+    <div class="weather-forecast-temperature">
+      <strong>12°</strong> 9°
+    </div>
+  </div>
+
+  <div class="col-2">
+    <h3>Wed</h3>
+    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+    <div class="weather-forecast-temperature">
+      <strong>12°</strong> 9°
+    </div>
+  </div>
+
+  <div class="col-2">
+    <h3>Fri</h3>
+    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+    <div class="weather-forecast-temperature">
+      <strong>12°</strong> 9°
+    </div>
+  </div>
+
+  <div class="col-2">
+    <h3>Sat</h3>
+    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
+    <div class="weather-forecast-temperature">
+      <strong>12°</strong> 9°
+    </div>
+  </div>
+
+</div>
+
 </div>
 
 <small><a href="https://github.com/17thaugust/weather-app-v2" target="_blank">Coded</a> by Karolina</small>
