--- a/index.html
+++ b/index.html
@@ -61,55 +61,9 @@
 
 <br />
 
-<div class="row weather-forecast">
+<div class="row weather-forecast" id="forecast">
 
-  <div class="col-2">
-    <h3>Sun</h3>
-    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-    <div class="weather-forecast-temperature">
-      <strong>12°</strong> 9°
-    </div>
-  </div>
 
-  <div class="col-2">
-    <h3>Mon</h3>
-    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-    <div class="weather-forecast-temperature">
-      <strong>12°</strong> 9°
-    </div>
-  </div>
-
-  <div class="col-2">
-    <h3>Tue</h3>
-    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-    <div class="weather-forecast-temperature">
-      <strong>12°</strong> 9°
-    </div>
-  </div>
-
-  <div class="col-2">
-    <h3>Wed</h3>
-    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-    <div class="weather-forecast-temperature">
-      <strong>12°</strong> 9°
-    </div>
-  </div>
-
-  <div class="col-2">
-    <h3>Fri</h3>
-    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-    <div class="weather-forecast-temperature">
-      <strong>12°</strong> 9°
-    </div>
-  </div>
-
-  <div class="col-2">
-    <h3>Sat</h3>
-    <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
-    <div class="weather-forecast-temperature">
-      <strong>12°</strong> 9°
-    </div>
-  </div>
 
 </div>
 
