--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <input type="search" placeholder="Type a city..." class="form-control" id="city-input" autocomplete="off" />
         </div>
         <div class="col-3">
-          <input type="submit" value="Search" class="btn btn-primary w-100"/></div>
+          <input type="submit" value="Search" class="btn btn-primary w-100" style="background-color: black; border-color: black;" /></div>
       </div>
     </form>
 
